--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-#totoro {
-  width: 100px;
-  height: auto;
+body {
+  margin: 60px;
+}
+.Movies {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  
+}
+.box {
+  width: 4%;
+  height: 30px;
+  border: solid 2px red;
 }
