--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  background-image: url(assets/bg.jpg);
+  
+}
 body {
   margin: 60px;
 }
@@ -6,12 +10,15 @@ body {
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
+  align-content: space-between;
+  align-items: flex-start;
+  border: solid 2px red;
   
 }
 .box {
-  width: 4%;
-  height: 30px;
+  width: 45px;
+  height: 60px;
   border: solid 2px red;
 }
