--- a/style.css
+++ b/style.css
@@ -1,23 +1,87 @@
 html {
-  background-image: url(assets/bg.jpg);
-
+  background-image: url(assets/bg.png);
+  background-size: 105%;
+  /* background-position: 70%; */
+  background-repeat: no-repeat;
 }
 body {
   margin: 60px;
 }
-.Movies {
-  width: 100%;
-  height: 100%;
+header {
+  background-image: url(assets/logo.png);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  width: 400px;
+  height: 150px;
+  text-align: right;
+  background-color: red;
+  position: fixed;
+  left: 15%;
+  top: 1%;
+}
+.bg {
+  width: 700px;
+  height: 400px;
+  background:  #ffffff;
+  border-radius: 10px;
+  box-shadow: 10px 10px 0 rgba(2, 2, 2, 0.1);
+  border: solid 2px #555555;
+  justify-content: center;
+  align-content: space-around;
+  opacity: .5;
+  position: fixed;
+  left: 20%;
+  z-index: -1;
+}
+.movies {
+  width: 700px;
+  height: 400px;
+  justify-content: center;
+  align-content: space-around;
+  position: fixed;
+  left: 20%;
+  top: 40%;
+}
+.row1 {
+  max-width: 1000px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-content: space-between;
-  align-items: flex-start;
-  border: solid 2px red;
-  
+  justify-content: center;
+  align-content: space-around;
+  align-items: center;
+  padding: 10px;
 }
-input {
-  height: 100px;
-  border: solid 2px red;
+.row2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.row3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.row4 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.row5 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.box {
+  display: flex;
+  align-items: center;
+  align-content: space-between;
+  padding: 20px;
 }
