style additional movie divs

--- a/style.css
+++ b/style.css
@@ -88,6 +88,27 @@ h1 {
   align-items: center;
   padding: 10px;
 }
+.row6 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.row7 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.row8 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
 .box {
   display: flex;
   align-items: center;
