--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ h1 {
   font-size: 3em;
 }
 .bg {
-  width: 540px;
-  height: 300px;
+  width: 740px;
+  height: 400px;
   background:  #ffffff;
   border-radius: 10px;
   box-shadow: 10px 10px 0 rgba(2, 2, 2, 0.1);
@@ -39,7 +39,7 @@ h1 {
   opacity: .5;
   position: fixed;
   left: 27%;
-  top: 40%;
+  top: 30%;
   z-index: -1;
 }
 .movies {
@@ -48,8 +48,8 @@ h1 {
   justify-content: center;
   align-content: space-around;
   position: fixed;
-  left: 20%;
-  top: 40%;
+  left: 25%;
+  top: 30%;
 }
 .row1 {
   max-width: 1000px;
@@ -122,7 +122,6 @@ input[type=checkbox]:checked {
   opacity: 0;
 }
 label {
-  background-image: url(assets/uncheckednaus.png);
   background-size: 100%;
   background-repeat: no-repeat;
   width: 75px;
@@ -140,4 +139,7 @@ label img {
   transform: scale(0.9);
   z-index: -1;
   opacity: 1;
+}
+#l1 {
+  background-image: url(assets/uncheckednaus.png);
 }
