--- a/style.css
+++ b/style.css
@@ -34,18 +34,18 @@ h1 {
   border-radius: 10px;
   box-shadow: 10px 10px 0 rgba(2, 2, 2, 0.1);
   border: solid 2px #555555;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: space-around;
-  opacity: .5;
+  opacity: .7;
   position: fixed;
   left: 27%;
   top: 20%;
   z-index: -1;
 }
 .movies {
-  width: 800px;
+  width: 900px;
   height: 600px;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: space-around;
   position: fixed;
   left: 25%;
@@ -54,57 +54,56 @@ h1 {
 .row1 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: space-around;
-  align-items: center;
-  
+  align-items: left;
 }
 .row2 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  
+  justify-content: flex-start;
+  align-content: space-around;
+  align-items: left;
 }
 .row3 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  
+  justify-content: flex-start;
+  align-content: space-around;
+  align-items: left;
 }
 .row4 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  
+  justify-content: flex-start;
+  align-content: space-around;
+  align-items: left;
 }
 .row5 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  
+  justify-content: flex-start;
+  align-content: space-around;
+  align-items: left;
 }
 .row6 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  
+  justify-content: flex-start;
+  align-content: space-around;
+  align-items: left;
 }
 .row7 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  
+  justify-content: flex-start;
+  align-content: space-around;
+  align-items: stretch;
 }
 .box {
   display: flex;
   align-items: center;
-  align-content: space-between;
+  /* align-content: space-between; */
 }
 input[type=checkbox] {
   opacity: 0;
