--- a/style.css
+++ b/style.css
@@ -27,37 +27,23 @@ h1 {
   font-family: 'Palanquin', sans-serif;
   font-size: 2em;
 }
-.bg {
-  width: 900px;
-  height: 450px;
-  background:  #ffffff;
-  border-radius: 10px;
-  box-shadow: 10px 10px 0 rgba(2, 2, 2, 0.1);
-  border: solid 2px #555555;
-  justify-content: flex-start;
-  align-content: space-around;
-  opacity: .7;
-  position: fixed;
-  left: 27%;
-  top: 20%;
-  z-index: -1;
-}
+
 .movies {
-  width: 900px;
+  width: 1000px;
   height: 600px;
   justify-content: flex-start;
   align-content: space-around;
   position: fixed;
-  left: 25%;
+  left: 20%;
   top: 20%;
 }
 p {
   background-color: white;
-  width: 200px;
+  width: 230px;
   height: 65px;
   border-radius: 50px;
   text-align: center;
-  margin-left: -37px;
+  margin-left: -30px;
   margin-top: 0px;
   z-index: -1;
 }
@@ -106,14 +92,14 @@ p {
 .row7 {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: space-around;
   align-items: stretch;
 }
 .box {
   display: flex;
   align-items: left;
-  /* width: 50px; */
+  width: 50px;
   
 }
 input[type=checkbox] {
