--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ header {
   background-image: url(assets/logo.png);
   -webkit-filter: drop-shadow( 0 0 40px #ffffff);
   filter: drop-shadow( 0 0 40px #ffffff);
-  background-size: 100%;
+  background-size: 80%;
   background-repeat: no-repeat;
   width: 300px;
-  height: 100px;
+  height: 120px;
   position: fixed;
-  left: 30%;
-  top: -1%;
+  left: 55%;
+  top: 1%;
 }
 h1 {
   text-align: center;
@@ -30,6 +30,9 @@ h1 {
 .totalTime {
   display: flex;
   flex-direction: row;
+  position: fixed;
+  left: 45%;
+  top: 15%;
 }
 .movies {
   width: 1000px;
@@ -52,6 +55,9 @@ p {
   margin-left: -20px;
   margin-top: 4px;
   z-index: -1;
+  -moz-box-shadow:    inset 0 0 10px rgb(77, 149, 197);
+  -webkit-box-shadow: inset 0 0 10px rgb(77, 149, 197);
+  box-shadow:         inset 0 0 10px rgb(77, 149, 197);
 }
 .row1 {
   display: flex;
@@ -115,10 +121,14 @@ input[type=checkbox]:checked {
   opacity: 0;
 }
 label {
-  background-size: 100%;
+  background-size: 110%;
   background-repeat: no-repeat;
   width: 75px;
   height: 75px;
+  border-radius: 50px;
+  -moz-box-shadow:    inset 0 0 20px rgb(77, 149, 197);
+  -webkit-box-shadow: inset 0 0 20px rgb(77, 149, 197);
+  box-shadow:         inset 0 0 20px rgb(77, 149, 197);
 }
 .check {
   width: 75px;
