--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ input[type=checkbox] {
 }
 input[type=checkbox]:checked {
   opacity: 0;
+  counter-increment: checked;
 }
 label {
   background-size: 110%;
