--- a/style.css
+++ b/style.css
@@ -13,26 +13,43 @@ header {
   background-image: url(assets/logo.png);
   -webkit-filter: drop-shadow( 0 0 40px #ffffff);
   filter: drop-shadow( 0 0 40px #ffffff);
-  background-size: 80%;
+  background-size: 68%;
   background-repeat: no-repeat;
   width: 300px;
-  height: 120px;
+  height: 100px;
   position: fixed;
-  left: 55%;
-  top: 1%;
+  left: 66%;
+  top: 3%;
 }
 h1 {
-  text-align: center;
-  padding-left: 150px;
+  height: 75px;
+  width: 720px;
+  text-align: left;
   font-family: 'Palanquin', sans-serif;
-  font-size: 2em;
+  font-size: 1.5em;
+  padding: 7px;
+  position: fixed;
+  left: 25%;
+  top: 1%;
+  background-color: rgba(255, 255, 255, 0.837);
+  font-family: 'Open Sans Condensed', sans-serif;
+  border-radius: 50px;
+  -moz-box-shadow:    inset 0 0 10px rgb(77, 149, 197);
+  -webkit-box-shadow: inset 0 0 10px rgb(77, 149, 197);
+  box-shadow:         inset 0 0 10px rgb(77, 149, 197);
+}
+ul {
+  position: fixed;
+  left: 26%;
+  top: 8%;
 }
 .totalTime {
   display: flex;
   flex-direction: row;
   position: fixed;
-  left: 45%;
-  top: 15%;
+  left: 36%;
+  top: 13.4%;
+  font-weight: bold; 
 }
 .movies {
   width: 1000px;
